--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Nails</title>
     <script src="js/scrollreveal.js"></script>
+    <link href="your-project-dir/icon-font/lineicons.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
@@ -238,7 +239,7 @@
                             <br>
                             👉🏻 Certificado de asistencia incluido 🎓📃<br>
                             <br>
-                            Costo total: $5000 ($1500 para inscribirse y reservar vacante y $3500 a abonar el día de cursada). <br>
+                            Costo total: $5.000 ($1500 para inscribirse y reservar vacante y $3500 a abonar el día de cursada). <br>
                             📝Sólo con inscripción previa 💅🏻🎓
                             </p>
                         <div class="btn-cerrar--polygel">
@@ -292,7 +293,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                Costo total: $4000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
+                                Costo total: $4.000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
                                 <br>
                                 📝Sólo con inscripción previa 💅🏻🎓</p><br>
                             <div class="btn-cerrar">
@@ -358,7 +359,7 @@
                             <br>
                             👉🏻 Certificado de asistencia incluido 🎓📃<br>
                             <br>
-                            Costo total: $4000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
+                            Costo total: $4.000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
                             <br>
                             📝Sólo con inscripción previa 💅🏻🎓<br>
                         <div class="btn-cerrar--semipermanente">
@@ -412,7 +413,7 @@
                         👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨ <br>
                         <br>
                         <br>
-                        🎓👉🏻Costo 👁️✨ $3500 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) </p> <br>
+                        🎓👉🏻Costo 👁️✨ $4.000 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) </p> <br>
                         📝Sólo con inscripción previa 💅🏻🎓
                         <div class="btn-cerrar--pestanas">
                             <label for="btn-modal--pestanas">Cerrar</label>
@@ -468,7 +469,7 @@
                             👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
                             
                             <br>
-                            🎓👉🏻Costo 👁️✨ $3500 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) <br>
+                            🎓👉🏻Costo 👁️✨ $4.000 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) <br>
                             <br>
                             💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                             <br>
@@ -525,7 +526,7 @@
                             👉🏻 Materiales para trabajar en clase 👁️💆‍♀️<br>
                             👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
                             <br>
-                            🎓👉🏻Costo 👁️💆‍♀️ $4000 💕📝 (Inscripción de $1000 y los restantes $3000 a abonar el día de la cursada) <br>
+                            🎓👉🏻Costo 👁️💆‍♀️ $4.000 💕📝 (Inscripción de $1000 y los restantes $3000 a abonar el día de la cursada) <br>
                             <br>
                             💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                             <br>
@@ -602,7 +603,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left">
                     <p class="price__name">Pestañas pelo por pelo.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>3.500</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
                     <div class="price__items">
                         <p class="price__features">Técnica clásica</p>
                         <p class="price__features">Iniciación en extensiones</p>
@@ -638,7 +639,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-right">
                     <p class="price__name">PESTAÑAS VOLUMEN RUSO.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>3.500</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
                     <div class="price__items">
                         <p class="price__features">Abanicos del 2D al 6D</p>
                         <p class="price__features">Diseño segun el tipo de ojo</p>
@@ -761,16 +762,19 @@
                         <p class="questions__show">Todas las capacitaciones están especialmente preparadas para que no sean requeridos conocimientos previos, pero en orden de complejidad este sería el siguiente: <br> <br>
                             <i class="fa-solid fa-angle-right"></i>Esmaltado semi permanente, kapping gel y kapping en polygel <br>
                             <i class="fa-solid fa-angle-right"></i>Soft gel y polygel <br>
-                            <i class="fa-solid fa-angle-right"></i>Uñas esculpidas y encapsuladas en polygel <br>
+                            <i class="fa-solid fa-angle-right"></i>Uñas esculpidas y encapsuladas en polygel<br>
                             <i class="fa-solid fa-angle-right"></i>Gelificadas y esculpidas en acrílico. <br>
                             </p>
                     </div>
                 </article>
             </section>
 
-            <section class="questions__offer reveal-down">
-                <h2 class="subtitle">¿Estas lista?</h2>
-                <p class="questions__copy">Da ese paso del cual nunca te vas a arrepentir. </p>
+            <section class="nuestras__redes reveal-down">
+                <h2 class="subtitle">Mis redes</h2>
+                <div class="redes">
+                    <div class="red red-1"><a href="https://www.instagram.com/Cursoscony/" target="_blank" Rel=»Noopener Noreferrer><img src="images/instagram.png" alt="Logo instagram"></a><label for="red-1">Instagram</label></div>
+                    <div class="red red-2"><a href="https://www.facebook.com/cursoscony" target="_blank" Rel=»Noopener Noreferrer><img src="images/facebook.png" alt="Logo Facebook"></a><label for="red-2">Facebook</label></div>
+                </div>
             </section>
         </section>
     </main>
@@ -781,7 +785,7 @@
         </div>
     </div>
 
-    <footer class="footer reveal-top">
+    <footer class="footer ">
         <section class="footer__container container">
             <nav class="nav nav--footer">
                 <h2 class="footer__title">Cursos de belleza y estética.</h2>
@@ -804,7 +808,7 @@
         </section>
 
         <section class="footer__copy container">
-            <h3 class="footer__copyright">Derechos reservados &copy; Constanza Ciro</h3> <br>|| Diseño by Matias Posadas ||
+            <h3 class="footer__copyright">Derechos reservados 2023 &copy; Constanza Ciro</h3>
         </section>
     </footer>
 
