--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 <!-- <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
 </head>
 <body>
-    
 
     <header class="hero">
         <nav class="nav container">
@@ -131,7 +130,7 @@
         <section class="knowledge" id="cursos">
             <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts ">
-                    <h2 class="subtitle">Curso completo de Acrílicas. ¡Domina las técnicas de uñas en acrílico!</h2>
+                    <h2 class="subtitle">Curso completo de Acrílicas ¡Domina las técnicas de uñas en acrílico!</h2>
                     <p class="knowledge__paragraph">En este curso te llevaré paso a paso por el arte de la creación de uñas en acrílico.
                         Aprenderás a dominar la mejor técnica de construcción que utilice y fui desarrollando a lo largo de 10 años.
                         Esta técnica es la indicada si buscas realizar uñas duraderas. <br>
@@ -195,7 +194,7 @@
         <section class="knowledge">
             <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Polygel. ¡Domina las técnicas de uñas en polygel!</h2>
+                    <h2 class="subtitle">Curso completo de Polygel ¡Domina las técnicas de uñas en polygel!</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás a dominar el polygel. <br>
                         Llevando a cabo  construcciones con moldes y capsulas, con una terminación de esmaltado. <br>
                         (Materiales incluidos).
@@ -255,7 +254,7 @@
         <section class="knowledge">
             <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Soft gel. ¡Domina las técnicas de uñas en softgel!</h2>
+                    <h2 class="subtitle">Curso completo de Soft gel ¡Domina las técnicas de uñas en softgel!</h2>
                     <p class="knowledge__paragraph">En este curso llevarás a cabo la veloz técnica del soft gel. <br>
                         Aprenderás la colocación de los tips, una óptima adherencia y un buen acabado de tus trabajos. <br>
                         (Materiales incluidos).
@@ -313,7 +312,7 @@
         <section class="knowledge">
             <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Esmaltado semi permanente, kapping gel y kapping en polygel.</h2>
+                    <h2 class="subtitle">Curso completo de Esmaltado semi permanente, kapping gel y kapping en polygel</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás todo lo necesario para realizar un buen esmaltado semi permanente + técnica de kapping gel y kapping en polygel.
                         </p>
                 </div>
@@ -375,7 +374,7 @@
         <section class="knowledge">
             <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Pestañas pelo por pelo.</h2>
+                    <h2 class="subtitle">Curso completo de Pestañas pelo por pelo</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
                         Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
                         </p>
@@ -400,12 +399,12 @@
 
                             🎓👁️✨Temario extensiones 1x1: <br>
                             <br>
-                        💖Higienización de párpado y pestañas. <br>
-                        💖Tipos de adherentes. <br>
+                        💖Higienización de párpado y pestañas <br>
+                        💖Tipos de adherentes <br>
                         💖Herramientas y materiales. <br>
-                        💖Preparación de diseñeo y distribución. <br>
-                        💖Tecnica de aplicación y fijado. <br>
-                        💖Asesoramiento de cuidados y recomendaciones. <br>
+                        💖Preparación de diseñeo y distribución <br>
+                        💖Tecnica de aplicación y fijado <br>
+                        💖Asesoramiento de cuidados y recomendaciones <br>
                         <br>
                         🎓💐Incluye: <br>
                         👉🏻 Certificado de asistencia 🎓📃 <br>
@@ -428,7 +427,7 @@
         <section class="knowledge">
             <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Pestañas Volumen ruso.</h2>
+                    <h2 class="subtitle">Curso completo de Pestañas Volumen ruso</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás a crear pestañas de volumen ruso del 2D al  6D</p>
                 </div>
 
@@ -455,12 +454,12 @@
                             <br>
                              🎓👁️✨Temario extensiones volumen ruso del 2D al 6D:<br>
                              <br>
-                            💖Medidas y grosores correctos y prohibidos.<br>
-                            💖Tipos de pinzas y herramientas necesarias.<br>
-                            💖Técnicas armado de abanicos.<br>
-                            💖Diseños con mapeo según el tipo de ojo.<br>
-                            💖Práctica armado y colocación del 2D al 6D.<br>
-                            💖Asesoramiento cuidador rigurosos.<br>
+                            💖Medidas y grosores correctos y prohibidos<br>
+                            💖Tipos de pinzas y herramientas necesarias<br>
+                            💖Técnicas armado de abanicos<br>
+                            💖Diseños con mapeo según el tipo de ojo<br>
+                            💖Práctica armado y colocación del 2D al 6D<br>
+                            💖Asesoramiento cuidador rigurosos<br>
                             <br>
                             🎓💐Incluye:<br>
                             <br>
@@ -487,7 +486,7 @@
         <section class="knowledge">
             <div class="knowledge__container container reveal-left">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso lifting y permanente con tintura de pestañas y cejas + perfilado de cejas.</h2>
+                    <h2 class="subtitle">Curso lifting y permanente con tintura de pestañas y cejas + perfilado de cejas</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás el arte del lifting y perfilado de cejas. Llevando a cabo cada paso hasta llegar al resultado final. <br>
                         </p>
                 </div>
@@ -506,7 +505,7 @@
                 <input type="checkbox" id="btn-modal--lifting">
                 <div class="container-modal--lifting">
                     <div class="content-modal--lifting">
-                        <h2>LIFTING Y PERMANENTE CON TINTURA DE PESTAÑAS Y CEJAS + PERFILADO DE CEJAS.</h2>
+                        <h2>LIFTING Y PERMANENTE CON TINTURA DE PESTAÑAS Y CEJAS + PERFILADO DE CEJAS</h2>
                         <p>🥰👁️✨ Curso lifting y permanente con tintura de pestañas y cejas + perfilado de cejas 👁️💆‍♀️🎓<br>
                             <br>
                             💕🎓Jornada de 4/5hs aproximadamente<br>
@@ -515,11 +514,11 @@
                              🎓💆‍♀️👁️ Temario lifting y permanente con tintura para perfilado:<br>
                              <br>
                             💖Higienización zona de trabajo.<br>
-                            💖Herramientas y materiales.<br>
-                            💖Práctica perfilado de cejas.<br>
-                            💖Práctica lifting y permanente.<br>
-                            💖Tecnica de tintura natural para cejas.<br>
-                            💖Tintura de pestañas.<br>
+                            💖Herramientas y materiales<br>
+                            💖Práctica perfilado de cejas<br>
+                            💖Práctica lifting y permanente<br>
+                            💖Tecnica de tintura natural para cejas<br>
+                            💖Tintura de pestañas<br>
                             <br>
                             🎓💐Incluye:<br>
                             👉🏻 Certificado de asistencia 🎓📃<br>
@@ -617,7 +616,7 @@
                     </p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
                     <div class="price__items">
-                        <p class="price__features">Prácticas en modelo vivo</p>
+                        <p class="price__features">Autopráctica</p>
                         <p class="price__features"></p>
                         <p class="price__features"></p>
                     </div>
@@ -652,7 +651,7 @@
 
     </section>
     <div class="subtitle--testimony >">
-        <h2 class="subtitle subtitle-testimony">Testimonios de alumnas</h2>
+        <h2 class="subtitle subtitle-testimony">Devoluciones de alumnas</h2>
     </div>
         <section class="testimony" id="testimonio">
             <div class="testimony__container container reveal-down">
@@ -704,7 +703,7 @@
                 <img src="images/rightarrow.svg" alt="" class="testimony__arrow" id="next">
             </div>
             <div class="cta-button">
-            <a href="https://www.facebook.com/cursoscony/reviews/?ref=page_internal" class="cta cta--testimony" target="_blank" Rel=»Noopener Noreferrer>Ver Opiniones en Facebook</a>
+            <a href="https://www.facebook.com/cursoscony/reviews/?ref=page_internal" class="cta cta--testimony" target="_blank" Rel=»Noopener Noreferrer>Ver devoluciones en Facebook</a>
             </div>
         </section>
 
