Posicionamiento Cerrar-Modal
Se posiciono de manera fixed botom
el botón de cerrar modal para facilitar a los usuarios su ubicación.
Como segunda ayuda para encontrarlo se le cambio el background a un color rojo llamativo.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             Costo total: $7000 ($2000 para inscribirse y reservar vacante y $5000 a abonar el día de cursada).<br>
                             <br>
                             📝Sólo con inscripción previa 💅🏻🎓</p><br>
-                        <div class="btn-cerrar--acrilicas">
+                        <div class="btn-cerrar btn-cerrar--acrilicas">
                             <label for="btn-modal--acrilicas">Cerrar</label>
                         </div>
                     </div>
@@ -242,7 +242,7 @@
                             Costo total: $5.000 ($1500 para inscribirse y reservar vacante y $3500 a abonar el día de cursada). <br>
                             📝Sólo con inscripción previa 💅🏻🎓
                             </p>
-                        <div class="btn-cerrar--polygel">
+                        <div class="btn-cerrar btn-cerrar--polygel">
                             <label for="btn-modal--polygel">Cerrar</label>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                             Costo total: $4.000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
                             <br>
                             📝Sólo con inscripción previa 💅🏻🎓<br>
-                        <div class="btn-cerrar--softgel">
+                        <div class="btn-cerrar btn-cerrar--softgel">
                             <label for="btn-modal--softgel">Cerrar</label>
                         </div>
                     </div>
@@ -368,7 +368,7 @@
                             Costo total: $4.000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
                             <br>
                             📝Sólo con inscripción previa 💅🏻🎓<br>
-                        <div class="btn-cerrar--semipermanente">
+                        <div class="btn-cerrar btn-cerrar--semipermanente">
                             <label for="btn-modal--semipermanente">Cerrar</label>
                         </div>
                     </div>
@@ -421,7 +421,7 @@
                         <br>
                         🎓👉🏻Costo 👁️✨ $4.000 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) </p> <br>
                         📝Sólo con inscripción previa 💅🏻🎓
-                        <div class="btn-cerrar--pestanas">
+                        <div class="btn-cerrar btn-cerrar--pestanas">
                             <label for="btn-modal--pestanas">Cerrar</label>
                         </div>
                     </div>
@@ -480,7 +480,7 @@
                             💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                             <br>
                             📍 En el centro de Merlo, a la vuelta del Vea 🛒 del mástil, a una cuadra y media de la Av.Libertador.<br>
-                        <div class="btn-cerrar--volumen">
+                        <div class="btn-cerrar btn-cerrar--volumen">
                             <label for="btn-modal--volumen">Cerrar</label>
                         </div>
                     </div>
@@ -537,11 +537,11 @@
                             💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                             <br>
                             📍 En el centro de Merlo, a la vuelta del Vea 🛒 del mástil, a una cuadra y media de la Av.Libertador.<br>
-                        <div class="btn-cerrar--lifting">
+                        <div class="btn-cerrar btn-cerrar--lifting">
                             <label for="btn-modal--lifting">Cerrar</label>
                         </div>
                     </div>
-                    <label for="btn-modal--lifting" class="cerrar-modal--lifting"></label>
+                    <!-- <label for="btn-modal--lifting" class="cerrar-modal--lifting"></label> -->
                 </div>
                 <!-- FIN MODAL PESTAÑAS LIFTING-->
             </div>
