Se completo la info de modal polygel y softgel
Se corrigió la información del modal polygel y soft gel

y se pusieron en mayúscula los títulos de los modales

--- a/index.html
+++ b/index.html
@@ -274,36 +274,34 @@
                 <input type="checkbox" id="btn-modal--softgel">
                 <div class="container-modal--softgel">
                     <div class="content-modal content-modal--softgel">
-                        <h2>Pestañas pelo por pelo</h2>
-                        <p>💕📅🕛Jornada: 4hs aproximadamente. <br>
+                        <h2>Curso presencial uñas soft gel técnico c/ base y polygel + deco tradicional</h2>
+                        <p><br>
+                            📅🕛Jornada: 4hs aprox<br>
                             <br>
-                            💅🏻🖌️ Programa de estudio: <br>
+                            💅🏻🖌️Algunos temas a trabajar: <br>
                             <br>
-                            💐 Preparación uña natural pre-aplicación.<br>
-                            💐 Aplicación de ácidos, conceptos de deshidratación y curado.<br>
-                            💐Utilización de las herramientas y preparación pre-aplicación.<br>
-                            💐Nivelación de la fibra natural.<br>
-                            💐 Conocimiento y diferenciación de los diferentes tipos de gel.<br>
-                            💐 Técnicas de aplicación de los diferentes geles.<br>
-                            💐 Corrección estructural.<br>
-                            💐 Esmaltado perfecto y gelificado.<br>
-                            💐Hidratación y asesoramiento de cuidados y mantenimiento.<br>
+                            💐Preparación de la uña natural, proceso pre-aplicación. <br>
+                            💐Materiales y herramientas.<br>
+                            💐Preparación y colocación tipo press con base y polygel.<br>
+                            💐Aplicación de semis, decoración con pedrería y glitters gel.<br>
+                            💐Gelificado (cobertura gel).<br>
+                            💐Técnicas de aplicación con demostraciones gráficas y prácticas.<br>
                             <br>
                             📝🗒️Se verán tips específicos en clase a tomar nota en clase 📝📒<br>
                             <br>
-                            Todo la formación necesaria para realizar una correcta aplicación de cada servicio, desde comienzo hasta la finalización, logrando servicios duraderos💅🏻✨👍🏻<br>
+                            Todo la formación necesaria para realizar una correcta colocación de uñas, desde comienzo hasta la finalización, logrando aplicación duraderas💅🏻✨👍🏻<br>
                             <br>
                             👉🏻 Otorgaremos los materiales para trabajar en clase 💅🏻🖌️<br>
-                            <br>
-                            👉🏻 Te llevas una guía escrita completa paso a paso para seguir practicando 💅🏻🖌️<br>
                             <br>
                             👉🏻 Al final de la capacitación podrás acceder al stock disponible de Tus Insumos, los mejores precios y los mismos materiales trabajados en clase🖌️💅🏻😊.<br>
                             <br>
                             👉🏻 Certificado de asistencia incluido 🎓📃<br>
                             <br>
-                            Costo total: $4.000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
+                            Costo total: $4500 ($1000 para inscribirse y reservar vacante y $3500 a abonar el día de cursada).<br>
                             <br>
                             📝Sólo con inscripción previa 💅🏻🎓<br>
+                            <br>
+                        </p>
                         <div class="btn-cerrar btn-cerrar--softgel">
                             <label for="btn-modal--softgel">Cerrar</label>
                         </div>
@@ -338,8 +336,8 @@
                 <input type="checkbox" id="btn-modal--semipermanente">
                 <div class="container-modal--semipermanente">
                     <div class="content-modal content-modal--semipermanente">
-                        <h2>Pestañas pelo por pelo</h2>
-                        <p>💕📅🕛Jornada: 4hs aproximadamente. <br>
+                        <h2>Esmaltado semi permanente, kapping gel y kapping en polygel</h2>
+                        <p> 📅🕛Jornada: 4hs aproximadamente. <br>
                             <br>
                             💅🏻🖌️ Programa de estudio: <br>
                             <br>
@@ -365,9 +363,11 @@
                             <br>
                             👉🏻 Certificado de asistencia incluido 🎓📃<br>
                             <br>
-                            Costo total: $4.000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
+                            Costo total: $4000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
                             <br>
                             📝Sólo con inscripción previa 💅🏻🎓<br>
+                            <br>
+                        </p>
                         <div class="btn-cerrar btn-cerrar--semipermanente">
                             <label for="btn-modal--semipermanente">Cerrar</label>
                         </div>
@@ -452,7 +452,7 @@
                 <input type="checkbox" id="btn-modal--volumen">
                 <div class="container-modal--volumen">
                     <div class="content-modal content-modal--volumen">
-                        <h2>🥰👁️✨Curso extensiones de pestañas voluntan ruso del 2D al 3D 👁️💖🎓
+                        <h2>Extensiones de pestañas voluntan ruso del 2D al 3D
                         </h2>
                         <p>💕🎓Jornada de 3hs aproximadamente <br>
 
