--- a/index.html
+++ b/index.html
@@ -547,6 +547,35 @@
             </div>
         </section>
 
+
+        <!-- S L I D E R  -->
+        <div class="slider__box">
+            <div class="slider__info">
+                <h2>
+                    Acompañadas en cada paso.
+                </h2>
+                <p>
+                    No te quedes con ninguna duda <br>
+                    Recibiras acompañamiento en tu trabajo en clase <br>
+                    Buen clima laboral, musica de trabajo y compañerismo.
+                </p>
+            </div>
+            <div class="slider">
+                <ul>
+                    <li><img src="images/Imagenes cony/1.jpg" alt=""></li>
+                    <li><img src="images/Imagenes cony/2.jpg" alt=""></li>
+                    <li><img src="images/Imagenes cony/3.jpg" alt=""></li>
+                    <li><img src="images/Imagenes cony/4.jpg" alt=""></li>
+                    <li><img src="images/Imagenes cony/5.jpg" alt=""></li>
+                    <li><img src="images/Imagenes cony/6.jpg" alt=""></li>
+                    <li><img src="images/Imagenes cony/7.jpg" alt=""></li>
+                </ul>
+            </div>
+            <a href="https://photos.google.com/share/AF1QipMwf8DXrhpzx83ZV-bg4-MyDlObHRljQOgHI15hNizDrXjG8gceDaliAa3FkxurmQ?key=NkNjVXdqRy1HZ1BITWRDOTZIdlNZYjV5eGxHV1NR" class="slider__button" target="_blank" Rel=»Noopener Noreferrer>Ver Album</a>
+        </div>
+
+
+
         <section class="price container">
             <h2 class="subtitle reveal-left">Obten el plan perfecto para aprender</h2>
             <div class="price__table ">
