Retoques de color slider
Se cambiaron los colores de slider en el mediaqueries de 600px

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <br>
                             👉🏻 Otorgaremos los materiales para trabajar en clase 💅🏻🖌️<br>
                             <br>
-                            👉🏻 Te llegas una guía escrita completa paso a paso para seguir practicando 💅🏻🖌️<br>
+                            👉🏻 Te llevas una guía escrita completa paso a paso para seguir practicando 💅🏻🖌️<br>
                             <br>
                             👉🏻 Al final de la capacitación podrás acceder al stock disponible de Tus Insumos, los mejores precios y los mismos materiales trabajados en clase🖌️💅🏻😊.<br>
                             <br>
@@ -556,8 +556,8 @@
                 </h2>
                 <p>
                     No te quedes con ninguna duda <br>
-                    Recibiras acompañamiento en tu trabajo en clase <br>
-                    Buen clima laboral, musica de trabajo y compañerismo.
+                    Recibirás acompañamiento en tu trabajo en clase <br>
+                    Buen clima laboral, música de trabajo y compañerismo.
                 </p>
             </div>
             <div class="slider">
