--- a/index.html
+++ b/index.html
@@ -764,8 +764,8 @@
                             </span>
                         </h3>
                         <p class="questions__show">Los cursos se dictan en Merlo centro, zona oeste del gran Buenos Aires <br>
-                            Nos encontramos en un edificio ubicado en la calle Pucheu  entre Juncal & Libertad. <br>
-                            La dirección exacta al ser un domicilio se considera dato sensible, el mismo es entregado una vez inscripta en la capacitación. <br>
+                            Nos encontramos en un edificio ubicado en la calle Pucheu 760 entre Juncal & Libertad. <br>
+                            El departamento al ser un domicilio se considera dato sensible, el mismo es entregado una vez inscripta en la capacitación. <br>
                             </p>
                     </div>
                 </article>
@@ -818,6 +818,7 @@
                     <div class="red red-2"><a href="https://www.facebook.com/cursoscony" target="_blank" Rel=»Noopener Noreferrer><img src="images/facebook.png" alt="Logo Facebook"></a><label for="red-2">Facebook</label></div>
                 </div>
             </section>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.2478320148616!2d-58.727644485192755!3d-34.67369406871008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbff78473c02f%3A0xca1696818502cf86!2sPucheu%20760%2C%20Merlo%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1679354227631!5m2!1ses!2sar" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
 
