Corrección info soft gel

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <div class="knowledge__container container">
                     <div class="knowledge__texts reveal-left">
                         <h2 class="subtitle">Curso completo de Esmaltado semi permanente, kapping gel y kapping en polygel</h2>
-                        <p class="knowledge__paragraph">En este curso aprenderás todo lo necesario para realizar un buen esmaltado semi permanente + técnica de kapping gel y kapping en polygel.
+                        <p class="knowledge__paragraph">En este curso aprenderás la construcción de uñas soft gel, llevando a cabo una técnica fácil, rápida y con un método exclusivo, fácil y duradera.
                             </p>
                     </div>
 
